# spidersilk

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  release.yml
ansible/: ansible.cfg  playbook.yml
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml  prod.yml
ansible/roles/app-config/defaults/: main.yml
ansible/roles/app-config/tasks/: main.yml
ansible/roles/app-config/templates/: values.yaml.j2
ansible/roles/helm-deploy/defaults/: main.yml
ansible/roles/helm-deploy/tasks/: main.yml
app/: .dockerignore  Dockerfile  pyproject.toml
app/src/spidersilk/: config.py  csv_parser.py  main.py  s3_client.py
app/src/spidersilk/static/: style.css
app/src/spidersilk/templates/: index.html  list.html  view.html
app/tests/: test_app.py  test_csv_parser.py
docs/: architecture.drawio  architecture.md  runbook.md
helm/spidersilk/: .helmignore  Chart.yaml  values-prod.yaml  values.yaml
helm/spidersilk/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
infra/cluster-autoscaler/: values.yaml
infra/kops/: README.md  cluster.yaml  ig-control-plane.yaml  ig-ondemand-workers.yaml  ig-spot-workers.yaml
infra/terraform/: iam.tf  lifecycle.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
