[project]
name = "spidersilk"
version = "0.1.0"
description = "CSV upload, parse, and S3-archive web application."
requires-python = ">=3.12"
authors = [{ name = "Ahmed Saeed" }]
dependencies = [
    "fastapi==0.115.2",
    "uvicorn[standard]==0.32.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "boto3==1.35.50",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "moto[s3]==5.0.18",
    "ruff==0.7.1",
]

[project.scripts]
spidersilk = "spidersilk.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spidersilk" = ["templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
